<resources>
    <string name="app_name">Strip Shot!</string>
    <string name="btn_text">¡Saca a alguien al azar!</string>
    <string name="valido">Valido</string>
    <string name="ana">Ana</string>
    <string name="melero">Melero</string>
    <string name="max">Max</string>
    <string name="trikko">Trikko</string>
    <string name="jd">JD</string>
    <string name="mery">Mery</string>
    <string name="david">David</string>
    <string name="abraham">Abraham</string>
    <string name="javi">Javi</string>
</resources>